# nemo_helper

./: .gitignore  Dockerfile  README.md  pyproject.toml
examples/speaker_diarization/conf/: config.yaml
examples/speaker_diarization/conf/sd/: nemo_sd.yaml
examples/speaker_diarization/src/: entry.py
examples/speaker_recognition/conf/: config.yaml
examples/speaker_recognition/conf/sr/: nemo_sr.yaml
examples/speaker_recognition/src/: entry.py
nemo_helper/: speaker_diarization.py  speaker_recognition.py
nemo_helper/nemo_onnx/: clustering_diarizer_onnx.py  msdd_models_onnx.py
